Add bootsrap reset

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>AXA Time Trackedr</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <script type="module">
@@ -22,6 +28,6 @@
       import "./index.js";
     </script>
 
-    <my-element mood="great"></my-element>
+    <time-tracker></time-tracker>
   </body>
 </html>
