--- a/index.html
+++ b/index.html
@@ -2,13 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AXA Time Trackedr</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <title>AXA Time Tracker</title>
   </head>
   <body>
     <script type="module">
@@ -22,9 +16,6 @@
       window.LitElement = LitElement;
       window.html = html;
       window.css = css;
-    </script>
-
-    <script type="module">
       // App Bootstrap
       import "./index.js";
     </script>
