Simplify index.html

--- a/index.html
+++ b/index.html
@@ -6,20 +6,9 @@
   </head>
   <body>
     <script type="module">
-      // Library Bootstrap
-      import {
-        LitElement,
-        html,
-        css
-      } from "https://unpkg.com/lit-element/lit-element.js?module";
-
-      window.LitElement = LitElement;
-      window.html = html;
-      window.css = css;
-      // App Bootstrap
+      // App bootstrap
       import "./index.js";
     </script>
-
     <time-tracker></time-tracker>
   </body>
 </html>
