--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>AXA Time Tracker</title>
   </head>
-  <body>
+  <body style="margin: 0">
     <script type="module">
       // App bootstrap
       import "./index.js";
