Use simpler ES6 so that Safari renders the app w/o syntax errors

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body style="margin: 0">
     <script type="module">
-      // App bootstrap
+      /* App bootstrap */
       import "./index.js";
     </script>
     <time-tracker></time-tracker>
