--- a/index.html
+++ b/index.html
@@ -1,48 +1,16 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <title>webrtc</title>
-    <script data-dapp-detection="">
-      !(function () {
-        let e = !1;
-        function n() {
-          if (!e) {
-            const n = document.createElement('meta');
-            (n.name = 'dapp-detected'), document.head.appendChild(n), (e = !0);
-          }
-        }
-        if (window.hasOwnProperty('ethereum')) {
-          if (
-            ((window.__disableDappDetectionInsertion = !0),
-            void 0 === window.ethereum)
-          )
-            return;
-          n();
-        } else {
-          var t = window.ethereum;
-          Object.defineProperty(window, 'ethereum', {
-            configurable: !0,
-            enumerable: !1,
-            set: function (e) {
-              window.__disableDappDetectionInsertion || n(), (t = e);
-            },
-            get: function () {
-              if (!window.__disableDappDetectionInsertion) {
-                const e = arguments.callee;
-                (e &&
-                  e.caller &&
-                  e.caller.toString &&
-                  -1 !== e.caller.toString().indexOf('getOwnPropertyNames')) ||
-                  n();
-              }
-              return t;
-            },
-          });
-        }
-      })();
-    </script>
+    <meta http-equiv="Content-Type" content="text/html; charset=Utf-8" />
+    <script src="qrcode.js"></script>
+
+    <title>P2P Communication</title>
   </head>
   <body>
+    <!-- QR Code Element -->
+    <div id="qr"></div>
+    <!-- / QR Code Element -->
+
     <script>
       let channel = null;
 
@@ -74,10 +42,10 @@
         connection.onicecandidate = (event) => {
           // console.log('onicecandidate', event)
           if (!event.candidate) {
-            document.getElementById('createdOffer').value = JSON.stringify(
-              connection.localDescription
-            );
+            var createdOffer = JSON.stringify(connection.localDescription);
+            document.getElementById('createdOffer').value = createdOffer;
             document.getElementById('createdOffer').hidden = false;
+            update_qrcode(createdOffer);
           }
         };
 
@@ -94,10 +62,10 @@
         connection.onicecandidate = (event) => {
           // console.log('onicecandidate', event)
           if (!event.candidate) {
-            document.getElementById('createdAnswer').value = JSON.stringify(
-              connection.localDescription
-            );
+            var createdAnswer = JSON.stringify(connection.localDescription);
+            document.getElementById('createdAnswer').value = createdAnswer;
             document.getElementById('createdAnswer').hidden = false;
+            update_qrcode(createdAnswer);
           }
         };
 
@@ -118,6 +86,7 @@
         channel.send(text);
       }
     </script>
+
     <table width="100%" border="1">
       <tbody>
         <tr>
