--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <title>P2P Communication</title>
   </head>
   <body>
-    <video width="300" height="170"></video>
+    <video id="offer-video" width="300" height="170"></video>
+    <video id="answer-video" width="300" height="170"></video>
+
+    <div id="qr"></div>
+
+    <button id="create-offer">Create QR Code</button>
+    <button id="accept-offer">Scan QR Code</button>
+    <div class="receive"></div>
+    <div class="send"></div>
 
     <table width="100%" border="1">
       <tbody>
@@ -21,7 +29,6 @@
         <tr>
           <td>step 1</td>
           <td>
-            <input type="button" value="create offer" id="create-offer" />
             <input id="createdOffer" type="text" hidden="" />
           </td>
           <td></td>
@@ -35,7 +42,7 @@
               type="text"
               placeholder="offer from initiator"
             />
-            <input type="button" value="accept offer" id="accept-offer" />
+            <!-- <input type="button" value="accept offer" id="accept-offer" /> -->
           </td>
         </tr>
         <tr>
@@ -80,20 +87,8 @@
       </tbody>
     </table>
 
-    QR Code Element
-    <div id="qr"></div>
-    <!-- / QR Code Element -->
-
     <script type="module">
       import QrScanner from './qr-scanner.js';
-      const qrScanner = new QrScanner(
-        document.querySelector('video'),
-        (result) => {
-          console.log('decoded qr code:', result);
-          qrScanner.stop();
-        }
-      );
-      //   qrScanner.start();
 
       let channel = null;
 
@@ -121,7 +116,6 @@
         // channel.onopen = event => console.log('onopen', event)
         // channel.onmessage = event => console.log('onmessage', event)
         channel.onmessage = (event) => alert(event.data);
-
         connection.onicecandidate = (event) => {
           // console.log('onicecandidate', event)
           if (!event.candidate) {
@@ -131,14 +125,39 @@
             update_qrcode(createdOffer);
           }
         };
-
         const offer = await connection.createOffer();
         await connection.setLocalDescription(offer);
+
+        // Wait for response QR Code
+        let qrScannerResponse = new QrScanner(
+          document.querySelector('#offer-video'),
+          async (result) => {
+            console.log('Peer approval response:', result);
+            qrScannerResponse.stop();
+            qrScannerResponse = undefined;
+
+            const answer = JSON.parse(result);
+            await connection.setRemoteDescription(answer);
+          }
+        );
+        qrScannerResponse.start();
       }
 
       async function step_2_accept_remote_offer() {
-        const offer = JSON.parse(document.getElementById('remoteOffer').value);
-        await connection.setRemoteDescription(offer);
+        console.log('haaaa');
+        let qrScannerAcceptOffer = new QrScanner(
+          document.querySelector('#answer-video'),
+          async (result) => {
+            console.log('Accepted Remote Offer:', result);
+            qrScannerAcceptOffer.stop();
+            qrScannerAcceptOffer = undefined;
+
+            const offer = JSON.parse(result);
+            await connection.setRemoteDescription(offer);
+            step_3_create_answer();
+          }
+        );
+        qrScannerAcceptOffer.start();
       }
 
       async function step_3_create_answer() {
@@ -146,9 +165,11 @@
           // console.log('onicecandidate', event)
           if (!event.candidate) {
             var createdAnswer = JSON.stringify(connection.localDescription);
+
+            update_qrcode(createdAnswer);
+
             document.getElementById('createdAnswer').value = createdAnswer;
             document.getElementById('createdAnswer').hidden = false;
-            update_qrcode(createdAnswer);
           }
         };
 
@@ -156,12 +177,12 @@
         await connection.setLocalDescription(answer);
       }
 
-      async function step_4_accept_answer() {
-        const answer = JSON.parse(
-          document.getElementById('remoteAnswer').value
-        );
-        await connection.setRemoteDescription(answer);
-      }
+      //   async function step_4_accept_answer() {
+      //     const answer = JSON.parse(
+      //       document.getElementById('remoteAnswer').value
+      //     );
+      //     await connection.setRemoteDescription(answer);
+      //   }
 
       async function send_text() {
         const text = document.getElementById('text').value;
@@ -176,10 +197,10 @@
         step_2_accept_remote_offer();
       });
       document.querySelector('#create-answer').addEventListener('click', () => {
-        step_3_create_answer();
+        // step_3_create_answer();
       });
       document.querySelector('#accept-answer').addEventListener('click', () => {
-        step_4_accept_answer();
+        // step_4_accept_answer();
       });
       document.querySelector('#send-text').addEventListener('click', () => {
         send_text();
