reset index html

--- a/index.html
+++ b/index.html
@@ -1,143 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=Utf-8" />
-    <script src="qrcode.js"></script>
-    <script src="qr-scanner.js"></script>
-    <script src="qr-scanner-worker.js"></script>
-
-    <title>P2P Communication</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>AXA Time Tracker</title>
   </head>
-  <body>
-    <video id="qr-video" width="300" height="170"></video>
-
-    <div id="qr"></div>
-
-    <button id="create-offer">Create QR Code</button>
-    <button id="accept-offer">Scan QR Code</button>
-    <div class="receive"></div>
-    <div class="send"></div>
-
-    <hr />
-
-    <input id="text" type="text" />
-    <input type="button" value="send" id="send-text" />
-
-    <hr />
-
-    <table border="1">
-      <tbody>
-        <tr>
-          <th colspan="2">connection</th>
-        </tr>
-        <tr>
-          <th>connectionState</th>
-          <td id="connectionState">not connected</td>
-        </tr>
-        <tr>
-          <th>iceConnectionState</th>
-          <td id="iceConnectionState">not connected</td>
-        </tr>
-      </tbody>
-    </table>
-
+  <body style="margin: 0">
     <script type="module">
-      import QrScanner from './qr-scanner.js';
-
-      let channel = null;
-
-      const connection = new RTCPeerConnection({
-        iceServers: [{ urls: 'stun:stun.l.google.com:19302' }],
-      });
-
-      connection.ondatachannel = (event) => {
-        console.log('ondatachannel');
-        channel = event.channel;
-        channel.onmessage = (event) => alert(event.data);
-      };
-
-      connection.onconnectionstatechange = (event) =>
-        (document.getElementById('connectionState').innerText =
-          connection.connectionState); // console.log('onconnectionstatechange', connection.connectionState)
-      connection.oniceconnectionstatechange = (event) =>
-        (document.getElementById('iceConnectionState').innerText =
-          connection.iceConnectionState);
-
-      async function step_1_initiator_create_offer() {
-        channel = connection.createDataChannel('data');
-        channel.onmessage = (event) => alert(event.data);
-        connection.onicecandidate = (event) => {
-          if (!event.candidate) {
-            var createdOffer = JSON.stringify(connection.localDescription);
-            update_qrcode(createdOffer);
-          }
-        };
-        const offer = await connection.createOffer();
-        await connection.setLocalDescription(offer);
-
-        // Wait for response QR Code
-        let qrScannerResponse = new QrScanner(
-          document.querySelector('#qr-video'),
-          async (result) => {
-            console.log('Peer approval response:', result);
-            qrScannerResponse.stop();
-            qrScannerResponse = undefined;
-
-            update_qrcode();
-
-            const answer = JSON.parse(result);
-            await connection.setRemoteDescription(answer);
-          }
-        );
-        qrScannerResponse.start();
-      }
-
-      async function step_2_accept_remote_offer() {
-        let qrScannerAcceptOffer = new QrScanner(
-          document.querySelector('#qr-video'),
-          async (result) => {
-            console.log('Accepted Remote Offer:', result);
-            qrScannerAcceptOffer.stop();
-            qrScannerAcceptOffer = undefined;
-
-            update_qrcode();
-
-            const offer = JSON.parse(result);
-            await connection.setRemoteDescription(offer);
-            step_3_create_answer();
-          }
-        );
-        qrScannerAcceptOffer.start();
-      }
-
-      async function step_3_create_answer() {
-        connection.onicecandidate = (event) => {
-          if (!event.candidate) {
-            var createdAnswer = JSON.stringify(connection.localDescription);
-
-            update_qrcode(createdAnswer);
-          }
-        };
-
-        const answer = await connection.createAnswer();
-        await connection.setLocalDescription(answer);
-      }
-
-      async function send_text() {
-        const text = document.getElementById('text').value;
-
-        channel.send(text);
-      }
-
-      document.querySelector('#create-offer').addEventListener('click', () => {
-        step_1_initiator_create_offer();
-      });
-      document.querySelector('#accept-offer').addEventListener('click', () => {
-        step_2_accept_remote_offer();
-      });
-      document.querySelector('#send-text').addEventListener('click', () => {
-        send_text();
-      });
+      /* App bootstrap */
+      import './index.js';
     </script>
+    <time-tracker></time-tracker>
   </body>
 </html>
